--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "短小精悍的前端缓存工具，防止内存“侧漏”",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "webpack"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,8 @@
     "babel-preset-latest": "^6.24.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.7.0"
   }
 }
